--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,9 @@ pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+pywin32==228
+pywinpty==0.5.7
+pyzmq==19.0.2
 qtconsole==4.7.5
 QtPy==1.9.0
 requests==2.25.1
